# hubspot-automation-2

./: .gitattributes  .gitignore
hubspot_ticket_automation/: CLAUDE.md  CODE-REVIEW.md  README.md
hubspot_ticket_automation/.claude/: settings.json
hubspot_ticket_automation/config/: categories.yaml  settings.yaml  sheets_state.json  state.json
hubspot_ticket_automation/docs/: audit-2026-07-23-cost-accuracy.md  carrier-claim-filing-guide.md  server-setup.md  shipsidekick-integration-opportunities.md
hubspot_ticket_automation/kb/: README.md  billing_faq.md  brand_voice.md  categories.md  damage_claims.md  glossary.md  integration_errors.md  inventory_accuracy.md  mispack_process.md  returns_rma.md  tracking_wismo.md
hubspot_ticket_automation/packn_os_hubspot_client/: README.md  __init__.py  client.py  db.py  pyproject.toml  rate_limit.py  tenant.py
hubspot_ticket_automation/packn_os_hubspot_client/tests/: __init__.py  burst.py  conftest.py  test_backfill_complaints.py  test_complaints.py  test_drafts.py  test_heal_loader.py  test_lua_parity.py  test_pipeline.py  test_postgres_writes.py  test_pregate.py  test_rerun.py  test_routines.py
hubspot_ticket_automation/prompts/: classify.md  draft_reply.md  extract_actions.md
hubspot_ticket_automation/research/: carrier_claim_automation_feasibility.md  operator_aid_claim_packet_spec.md
hubspot_ticket_automation/scripts/: authorize_laptop_key.sh  backfill_complaints.py  cleanup_cutover_draft_engagements.py  forward_action_items.py  gmail_auth.py  heal_complaint_order_numbers.py  hubspot_inbox_discover.py  (+19 more)
(+38 files in other folders)
